[metadata]
name = ppf-sampleproject
version = 3.0
description = A sample Python project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adrianschlatter/ppf.sampleproject/tree/master
project_urls =
    Bug Reports = hhttps://github.com/adrianschlatter/ppf.sampleproject/issues
    Funding = https://donate.pypi.org
    Say Thanks! = http://saythanks.io/to/example
    Source = https://github.com/adrianschlatter/ppf.sampleproject
author = Adrian Schlatter
# Do *not* provide author_email here. Instead, provide email for
# software / licensing / ... questions (centrally) on GitHub.
# If email changes (e.g. discard because of too much spam),
# adjust email in single place instead of in every package.
# author_email = private@private.pr

license = MIT
license_files = LICENSE

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha
    # Indicate who your project is intended for
    Intended Audience :: Developers
    Intended Audience :: Manufacturing
    Intended Audience :: Information Technology
    Topic :: Utilities
    # Pick your license as you wish (should match "license" above)
    License :: OSI Approved :: BSD License
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    Programming Language :: Python :: 3
    Operating System :: OS Independent

# What does your project relate to?
keywords = sample, setuptools, development

[options]
package_dir = 
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.5, <4
install_requires = numpy; plumbum
python_requires = >=3.6, <4

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using:
# pip install -e .[dev,test]
test =
    check-manifest
    setuptools>=40.5.0
    flake8
    pytest
    coverage
dev =
    tox
    twine

[options.package_data]
sample = package_data.dat

[options.data_files]
# Although 'package_data' is the preferred approach, in some case you may
# need to place data files outside of your packages. See:
# http://docs.python.org/distutils/setupscript.html#installing-additional-files
#
# In this case, 'data_file' will be installed into '<sys.prefix>/my_data'
my_data = data/data_file

[options.entry_points]
console_scripts =
    cmdlinetool = sample.cli:main

[tool:pytest]
testpaths =
    tests

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F821
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**
