[metadata]
name = ppf-sample
version = attr: ppf.sample.__version__
description = A sample Python project
long_description = file: docs/README_pypi.md
long_description_content_type = text/markdown
url = https://github.com/adrianschlatter/ppf.sample/tree/master
project_urls =
    Bug Reports = https://github.com/adrianschlatter/ppf.sample/issues
    Funding = https://donate.pypi.org
    Say Thanks! = http://saythanks.io/to/example
    Source = https://github.com/adrianschlatter/ppf.sample
author = Adrian Schlatter
# Do *not* provide author_email here. Instead, provide email for
# software / licensing / ... questions (centrally) on GitHub.
# If email changes (e.g. discard because of too much spam),
# adjust email in single place instead of in every package.

license = MIT
license_files = LICENSE

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Manufacturing
    Intended Audience :: Information Technology
    Topic :: Utilities
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = sample, setuptools, development

[options]
package_dir = 
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.5, <4
install_requires = numpy; plumbum

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using:
# pip install -e .[dev,test]
test =
    check-manifest
    setuptools>=40.5.0
    flake8
    pytest
    coverage
dev =
    tox
    twine

[options.package_data]
sample = package_data.dat

[options.data_files]
# Although 'package_data' is the preferred approach, in some case you may
# need to place data files outside of your packages. See:
# http://docs.python.org/distutils/setupscript.html#installing-additional-files
#
# In this case, 'data_file' will be installed into '<sys.prefix>/my_data'
my_data = data/data_file

[options.entry_points]
console_scripts =
    cmdlinetool = ppf.sample.cli:main

[tool:pytest]
testpaths =
    tests

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F821
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**

[coverage:run]
command_line = -m pytest
branch = True

[coverage:report]
omit = tests/*

